ecmascript/parser/tests/typescript-errors/recovery/function/simple.ts.stderr
error: Expected identifier after this token
 --> $DIR/tests/typescript-errors/recovery/function/simple.ts:1:1
  |
1 | function () {
  | ^^^^^^^^

